Fix full-screen popups not opening in a tab on mobile Firefox

--- a/webpages/popup/style.css
+++ b/webpages/popup/style.css
@@ -123,6 +123,9 @@ body {
 .popup-title {
   padding-inline-start: 5px;
 }
+.popout {
+  cursor: pointer;
+}
 .popout > .popout-img {
   display: inline-block;
   vertical-align: -3px;
